// Database Schema for AWP Project
// Generated from Laravel migrations

Table clients {
  id serial [pk]
  name varchar(255) [not null]
  registration_number varchar(255) [null]
  address text [null]
  phone varchar(255) [null]
  email varchar(255) [null]
  active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [null, default: `CURRENT_TIMESTAMP`]
}

Table industry_types {
  id serial [pk]
  code varchar(255) [unique, not null]
  name varchar(255) [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [null, default: `CURRENT_TIMESTAMP`]
}

Table client_industry {
  id serial [pk]
  client_id integer [not null]
  industry_id integer [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [null, default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (client_id, industry_id) [unique]
  }
}

// Relationships
Ref: client_industry.client_id > clients.id [delete: cascade]
Ref: client_industry.industry_id > industry_types.id [delete: cascade]

// Additional notes
// - client_industry is a pivot table for many-to-many relationship between clients and industry_types
// - Composite unique constraint prevents duplicate client-industry relationships
// - All tables use serial primary keys (auto-incrementing integers)
// - Timestamps use Laravel conventions with created_at and updated_at fields